--- a/ApiTest/templates/pyechartReport.html
+++ b/ApiTest/templates/pyechartReport.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="e97756894f444aa1a75fbd95e31cc9bb" class="chart-container" style="width:900px; height:500px;"></div>
+    <div id="bb94e9d9db074a3c9e407ca81f99cccb" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_e97756894f444aa1a75fbd95e31cc9bb = echarts.init(
-            document.getElementById('e97756894f444aa1a75fbd95e31cc9bb'), 'white', {renderer: 'canvas'});
-        var option_e97756894f444aa1a75fbd95e31cc9bb = {
+        var chart_bb94e9d9db074a3c9e407ca81f99cccb = echarts.init(
+            document.getElementById('bb94e9d9db074a3c9e407ca81f99cccb'), 'white', {renderer: 'canvas'});
+        var option_bb94e9d9db074a3c9e407ca81f99cccb = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -52,10 +52,15 @@
             "name": "Duration",
             "data": [
                 0.496,
-                1.337,
                 0.317,
+                0.274,
                 0.166,
-                0.043
+                0.043,
+                0.275,
+                0,
+                0,
+                0,
+                0.264
             ],
             "barCategoryGap": "20%",
             "label": {
@@ -121,10 +126,15 @@
             },
             "data": [
                 "get_unit_list",
-                "update_unit",
                 "create_unit",
+                "update_unit",
                 "get_unit_by_id",
-                "delete_unit_by_group_name"
+                "delete_unit_by_group_name",
+                "create_data_form_config",
+                "delete_data_form_config",
+                "get_data_form_config_details",
+                "get_data_form_config_list",
+                "get_department_list"
             ]
         }
     ],
@@ -241,7 +251,7 @@
         "zoomLock": false
     }
 };
-        chart_e97756894f444aa1a75fbd95e31cc9bb.setOption(option_e97756894f444aa1a75fbd95e31cc9bb);
+        chart_bb94e9d9db074a3c9e407ca81f99cccb.setOption(option_bb94e9d9db074a3c9e407ca81f99cccb);
     </script>
 </body>
 </html>
